{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 331,
  "lineage": "363ccfcc-b3ca-ff6c-47c7-c5ff346237a2",
  "resources": [
    {
      "module": "module.aks_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/networkSecurityGroups/snet-aks-nsg",
            "location": "australiasoutheast",
            "name": "snet-aks-nsg",
            "resource_group_name": "flight-reservation-application-aks-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-aks-nsg",
            "resource_group_name": "flight-reservation-application-aks-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.aks_network.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.aks_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-aks-dev-vnet/subnets/snet-aks",
            "name": "snet-aks",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "flight-reservation-application-aks-dev-rg",
            "virtual_network_name": "flight-reservation-application-aks-dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-aks",
            "resource_group_name": "flight-reservation-application-aks-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a",
            "virtual_network_name": "flight-reservation-application-aks-dev-vnet"
          },
          "dependencies": [
            "module.aks_network.azurerm_resource_group.this",
            "module.aks_network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.aks_network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-aks-dev-vnet/subnets/snet-aks",
            "network_security_group_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/networkSecurityGroups/snet-aks-nsg",
            "subnet_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-aks-dev-vnet/subnets/snet-aks"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aks_network.azurerm_network_security_group.this",
            "module.aks_network.azurerm_resource_group.this",
            "module.aks_network.azurerm_subnet.this",
            "module.aks_network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.aks_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ee073ec5-c2dc-4aef-807a-24972cff92dd",
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-aks-dev-vnet",
            "location": "australiasoutheast",
            "name": "flight-reservation-application-aks-dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "flight-reservation-application-aks-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.20.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-aks-dev-vnet/subnets/snet-aks",
                "name": "snet-aks",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-aks-dev-rg/providers/Microsoft.Network/networkSecurityGroups/snet-aks-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "flight-reservation-application-aks-dev-vnet",
            "resource_group_name": "flight-reservation-application-aks-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.aks_network.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ci",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/networkInterfaces/flight-reservation-application-ci-nic",
            "internal_domain_name_suffix": "blqqlq5rusiezdelzqyclwls0f.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/publicIPAddresses/flight-reservation-application-ci-pip",
                "subnet_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-ci"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadaeast",
            "mac_address": "7C-ED-8D-06-61-BF",
            "name": "flight-reservation-application-ci-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "virtual_machine_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Compute/virtualMachines/flight-reservation-application-ci-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "flight-reservation-application-ci-nic",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.vm.azurerm_public_ip.this",
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_subnet.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/networkInterfaces/flight-reservation-application-monitoring-nic",
            "internal_domain_name_suffix": "blqqlq5rusiezdelzqyclwls0f.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/publicIPAddresses/flight-reservation-application-monitoring-pip",
                "subnet_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-monitoring"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadaeast",
            "mac_address": "7C-1E-52-40-AB-E1",
            "name": "flight-reservation-application-monitoring-nic",
            "private_ip_address": "10.10.2.4",
            "private_ip_addresses": [
              "10.10.2.4"
            ],
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "virtual_machine_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Compute/virtualMachines/flight-reservation-application-monitoring-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "flight-reservation-application-monitoring-nic",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.vm.azurerm_public_ip.this",
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_subnet.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ci",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/publicIPAddresses/flight-reservation-application-ci-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.104.161.70",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "flight-reservation-application-ci-pip",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "flight-reservation-application-ci-pip",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_subnet.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/publicIPAddresses/flight-reservation-application-monitoring-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.175.84.206",
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "flight-reservation-application-monitoring-pip",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "flight-reservation-application-monitoring-pip",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_subnet.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm_network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ci",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/networkSecurityGroups/snet-ci-nsg",
            "location": "canadaeast",
            "name": "snet-ci-nsg",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-ci-nsg",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.vm_network.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/networkSecurityGroups/snet-monitoring-nsg",
            "location": "canadaeast",
            "name": "snet-monitoring-nsg",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-monitoring-nsg",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.vm_network.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ci",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-ci",
            "name": "snet-ci",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "virtual_network_name": "flight-reservation-application-vm-dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-ci",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a",
            "virtual_network_name": "flight-reservation-application-vm-dev-vnet"
          },
          "dependencies": [
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-monitoring",
            "name": "snet-monitoring",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "virtual_network_name": "flight-reservation-application-vm-dev-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-monitoring",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a",
            "virtual_network_name": "flight-reservation-application-vm-dev-vnet"
          },
          "dependencies": [
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm_network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ci",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-ci",
            "network_security_group_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/networkSecurityGroups/snet-ci-nsg",
            "subnet_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-ci"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm_network.azurerm_network_security_group.this",
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_subnet.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-monitoring",
            "network_security_group_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/networkSecurityGroups/snet-monitoring-nsg",
            "subnet_id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-monitoring"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm_network.azurerm_network_security_group.this",
            "module.vm_network.azurerm_resource_group.this",
            "module.vm_network.azurerm_subnet.this",
            "module.vm_network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c305e10a-a4f1-4c90-8c8b-cc3025d972d5",
            "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet",
            "location": "canadaeast",
            "name": "flight-reservation-application-vm-dev-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.10.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-ci",
                "name": "snet-ci",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.10.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3a2b3e52-7ab7-4b46-af65-cddfb1489b0a/resourceGroups/flight-reservation-application-vm-dev-rg/providers/Microsoft.Network/virtualNetworks/flight-reservation-application-vm-dev-vnet/subnets/snet-monitoring",
                "name": "snet-monitoring",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "flight-reservation-application-vm-dev-vnet",
            "resource_group_name": "flight-reservation-application-vm-dev-rg",
            "subscription_id": "3a2b3e52-7ab7-4b46-af65-cddfb1489b0a"
          },
          "dependencies": [
            "module.vm_network.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}